--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "starter-name": "gatsby-starter-portfolio-cara",
   "scripts": {
     "build": "gatsby build",
-    "dev": "nodemon --exec 'gatsby develop -H 0.0.0.0'",
+    "dev": "nodemon --exec 'gatsby develop -H 0.0.0.0' -L src -e mdx",
     "develop": "gatsby develop",
     "develop:cypress": "cross-env CYPRESS_SUPPORT=y yarn develop",
     "build:cypress": "cross-env CYPRESS_SUPPORT=y yarn build",
